Updated WebMainView to take name of city it is supposed to show on the map. Updated index.py to provide the city name to WebMainView. Updated config.ini to provide path to html template for WebMainView to render.

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,6 @@
 [PATHS]
-diagnostics: diagnostics/
-data: data/
-geocodingsCache: data/geocodingscache.txt
+diagnostics: 		diagnostics/
+data: 			data/
+geocodingsCache: 	data/geocodingscache.txt
+desktopMainView: 	data/DesktopView.htm
+webMainView: 		data/WebView.htm
