Updated config.ini to provide num worker threads and num presented offers.

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,3 +4,9 @@ data: 			data/
 geocodingsCache: 	data/geocodingscache.txt
 desktopMainView: 	data/DesktopView.htm
 webMainView: 		data/WebView.htm
+
+[PERFORMANCE]
+numWorkerThreads:	5
+
+[OUTPUT]
+numPresentedOffers:	25
