--- a/config/config.ini
+++ b/config/config.ini
@@ -10,3 +10,13 @@ numWorkerThreads:	5
 
 [OUTPUT]
 numPresentedOffers:	25
+
+[DIAGNOSTICS]
+; Where the output should go : NONE, TERMINAL, FILE
+loggingOutput:		FILE
+
+; When loggingOutput = FILE, then filename must be specified
+loggingOutputFile:	diagnostics/log.txt
+
+; How detailed logging we want : DEBUG, INFO, WARNING, ERROR, FATAL
+loggingLevel:		DEBUG
