Removed unnecessary config from config.ini

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [PATHS]
-diagnostics: 		diagnostics/
+; 'data' path is needed for locating streets and districts data file for given city
 data: 			data/
 geocodingsCache: 	data/geocodingscache.txt
 desktopMainView: 	data/DesktopView.htm
