Changed project to seperate mobile view from desktop view, unit test for UserAgent to be implemented

--- a/config/config.ini
+++ b/config/config.ini
@@ -4,12 +4,13 @@ data: 			data/
 geocodingsCache: 	data/geocodingscache.txt
 desktopMainView: 	data/DesktopView.htm
 webMainView: 		data/WebView.htm
+m.webMainView: 		data/MobileWebView.htm
 
 [PERFORMANCE]
-numWorkerThreads:	5
+numWorkerThreads:	8
 
 [OUTPUT]
-numPresentedOffers:	25
+numPresentedOffers:	30
 
 [DIAGNOSTICS]
 ; Where the output should go : NONE, TERMINAL, FILE
